--- a/eletron-frontend/src/app/app.component.html
+++ b/eletron-frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="container mx-auto bg-slate-300 h-screen">
+<!-- <div class="container mx-auto h-screen">
   <div class="card flex flex-col justify-content-center align-content-center align-items-center h-full">
-    <p-sidebar #sidebarRef [(visible)]="sidebarVisible" styleClass="w-1/2">
+    <p-sidebar #sidebarRef [(visible)]="sidebarVisible">
         <ng-template pTemplate="headless">
             <div class="flex flex-column h-full">
                 <div class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0">
@@ -196,8 +196,28 @@
         </ng-template>
     </p-sidebar>
 
+    <p-menubar [model]="items" />
+
+    <p-card class="w-full mb-8">
+        <p-progressBar mode="indeterminate" [style]="{'height': '4px'}" />
+    </p-card>
+
     <p-button (onClick)="sidebarVisible = true" icon="pi pi-arrow-right"></p-button>
     <p>tailwind/primeng/primeicons/primeflex test</p>
     
     </div>
-  </div>
+
+    <p>sdasds</p>
+</div> -->
+
+<p-toast></p-toast>
+
+@if (loading) { 
+    <p-progressBar mode="indeterminate" [style]="{'height': '4px'}" /> 
+}
+
+<!-- <app-navbar></app-navbar> -->
+<div class="container mx-auto">
+    <router-outlet></router-outlet>
+</div>
+<!-- <app-footer></app-footer> -->
