--- a/eletron-frontend/src/styles.css
+++ b/eletron-frontend/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap');
-@import "primeng/resources/themes/aura-light-blue/theme.css";
+@import "primeng/resources/themes/aura-light-noir/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.scss";
@@ -19,11 +19,21 @@
     }
 }
 
-html { 
-    font-size: 14px; /* primeng scale */ 
-}
+html { font-size: 14px; /* primeng scale */ }
+body { margin: 0; }
+body, .p-toast { font-family: 'Mona Sans', sans-serif !important; }
 
-body {
-    margin: 0;
-    font-family: 'Mona Sans', sans-serif !important;
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb {
+    background: #afafaf;
+    border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #a3a3a3;
 }
