--- a/eletron-frontend/src/app/layout/footer/footer.component.html
+++ b/eletron-frontend/src/app/layout/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="bg-slate-600">
+    <div class="container mx-auto py-8 px-6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae facilis necessitatibus ipsam, ut dolorem doloremque architecto cupiditate? Sint doloribus, eos minima, amet fugit perferendis accusamus asperiores at dolorum quam optio enim consequatur quia quisquam autem, veniam nesciunt sapiente cupiditate molestias praesentium iste necessitatibus natus facere! Tenetur vero dignissimos minus molestiae odit eius nihil commodi facilis, laborum inventore adipisci quia aliquid eaque ad sequi reprehenderit amet facere ipsa consequatur. Mollitia quos vel sint explicabo et officia, fugiat modi incidunt eligendi sed accusantium error odio quod voluptatem nemo a deserunt tenetur itaque quaerat sapiente qui facere consectetur? Autem quis blanditiis recusandae nihil.</p>
+    </div>
+</div>
