--- a/eletron-frontend/src/app/app.component.html
+++ b/eletron-frontend/src/app/app.component.html
@@ -9,8 +9,8 @@
     </div>
 }
 
-<app-nav></app-nav>
-<div class="container mx-auto pt-16">
+<div>
+    <app-nav></app-nav>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
