test: leaflet map prod

--- a/eletron-frontend/src/app/components/home/home.component.css
+++ b/eletron-frontend/src/app/components/home/home.component.css
@@ -9,3 +9,47 @@
     background-position: center center;
     background-repeat: no-repeat; 
 }
+
+main .title {
+  line-height: 1.1;
+}
+
+.custom-button {
+    display: inline-flex;
+    font-size: 13px;
+    align-items: center;
+    border-radius: 24px;
+    cursor: pointer;
+    overflow: hidden;
+    transition: background-color 0.3s, color 0.3s;
+    position: relative;
+    width: 90px;
+    height: 30px;
+  }
+  
+  .button-icon {
+    transition: transform 0.3s cubic-bezier(.81,.33,.23,.74);
+    position: absolute;
+    left: 10px;
+  }
+  
+  .button-text {
+    transition: transform 0.3s cubic-bezier(.81,.33,.23,.74);
+    position: absolute;
+    right: 12px;
+    font-weight: 500;
+  }
+  
+  .custom-button:hover {
+    background-color: #000;
+    color: #fff;
+  }
+  
+  .custom-button:hover .button-icon {
+    transform: translateX(56px);
+  }
+  
+  .custom-button:hover .button-text {
+    transform: translateX(-18px);
+  }
+  
