--- a/eletron-frontend/src/app/components/home/home.component.html
+++ b/eletron-frontend/src/app/components/home/home.component.html
@@ -1,35 +1,60 @@
-<header #header class="bg-white shadow-sm">
-    <div class="container mx-auto flex flex-col md:flex-row justify-between gap-4 py-6 px-4">
+<header #header class="bg-white">
+    <div class="container mx-auto flex flex-col md:flex-row justify-between gap-4 md:gap-1 py-6 px-4">
         <div class="flex items-center flex-col md:flex-row gap-4 py-2 md:py-0">
             <img width="40px" class="img-fluid" src="assets/img/logo-eletron.png" alt="eletron-logo">
-            <span class="text-lg font-medium">Eletrônica do Luis</span>
+            <div class="flex flex-col gap-2 md:gap-1 text-center md:text-left">
+                <span class="text-xl font-medium">Eletrônica do Luis</span>
+                <div class="flex gap-4 text-slate-600 text-xs md:text-sm">
+                    <span><i class="pi pi-map-marker text-xs mr-1"></i>Nova Venécia-ES</span>
+                    <span><i class="pi pi-whatsapp text-xs mr-1"></i>(27) 99969-2465</span>
+                </div>
+            </div>
         </div>
-        <div class="flex justify-center items-center text-xs md:text-sm gap-5 text-center text-slate-600">
-            <span><i class="pi pi-map-marker mr-2"></i>Nova Venécia-ES</span>
-            <span><i class="pi pi-whatsapp mr-2"></i>(27) 99969-2465</span>
+        <div class="flex justify-center items-center">
+            <a routerLink="/sistema" class="custom-button text-neutral-600 border-1 border-neutral-600">
+                <i class="fa-solid fa-arrow-right button-icon"></i>
+                <small class="button-text">SISTEMA</small>
+            </a>
         </div>
     </div>
 </header>
 
-<main class="container h-screen mx-auto p-4 mt-4 main-background" style="background-image: url('assets/img/bg-logo-eletron.png')">
+<main class="container h-screen mx-auto mt-2 p-4 main-background" style="background-image: url('assets/img/bg-logo-eletron.png')">
     <div class="flex flex-col text-center md:text-left gap-5">
-        <div class="mb-8">
-            <span class="text-5xl sm:text-6xl font-semibold">Assistência técnica <br> de eletrônicos em geral.</span>
+        <div class="mb-6">
+            <span class="title text-5xl sm:text-6xl font-medium">Assistência técnica <br> de 
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500 font-semibold">
+                    eletrônicos em geral
+                </span>
+            </span>
         </div>
-        <div class="w-3/4 lg:w-1/2 rounded-2xl overflow-hidden">
+
+        <div class="md:w-1/2 z-10 rounded-2xl overflow-hidden">
             <div 
                 style="height: 300px"
                 leaflet
                 [leafletOptions]="options"
                 [leafletLayers]="[marker]"
             ></div>
+            <!-- <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d18599.93427791785!2d-40.4013411!3d-18.707284!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb5db42e8029599%3A0x3edcf99222fca05a!2sEletr%C3%B4nica%20do%20Luis!5e1!3m2!1spt-BR!2sbr!4v1731246607609!5m2!1spt-BR!2sbr"
+                width="100%" 
+                height="450" 
+                style="border:0" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe> -->
         </div>
+
         <div>
             <a href="#section1">Seção 1</a>
         </div>
     </div>
 </main>
 
-<div id="section1" class="h-screen lines-background" style="background-image: url('assets/img/bg-lines.png')">
+<div id="section1" class="h-screen lines-background" style="background-image: url('assets/img/bg-lines.png')"></div>
 
+<div class="fixed z-50 bottom-10 md:bottom-20 right-10 md:right-20">
+    <p-button icon="pi pi-whatsapp" [rounded]="true" severity="success" size="large" />
 </div>
