--- a/eletron-frontend/src/styles.css
+++ b/eletron-frontend/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mona+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap');
 @import "primeng/resources/themes/aura-light-noir/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
@@ -24,17 +24,17 @@
     }
 
     .p-button.p-button-lg {
-        padding: 35px;
+        padding: 28px;
     }
 
     .p-button.p-button-lg .p-button-icon {
-        font-size: 36px;
+        font-size: 28px;
     }
 }
 
 html { 
     scroll-behavior: smooth;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 body { 
@@ -42,18 +42,18 @@ body {
 }
 
 @font-face {
-    font-family: 'Montserrat', sans-serif !important; 
+    font-family: 'Funnel Display', sans-serif !important; 
     font-named-instance:"Regular" !important;
-    src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap') !important;
+    src: url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap') !important;
 }
 
 :root {
-    font-family: 'Montserrat', sans-serif !important; 
-    --font-family: "Montserrat", sans-serif !important;
+    font-family: 'Funnel Display', sans-serif !important; 
+    --font-family: "Funnel Display", sans-serif !important;
 }
 
 body, .p-toast { 
-    font-family: 'Montserrat', sans-serif !important; 
+    font-family: 'Funnel Display', sans-serif !important; 
 }
 
 .img-fluid {
@@ -61,8 +61,14 @@ body, .p-toast {
     height: auto;
 }
 
-.from-blue-500, .to-purple-500 {
+.from-blue-500, .to-teal-400, .from-purple-500, .from-green-500, .to-yellow-500, .from-orange-500 {
     --tw-gradient-from-position: ;
     --tw-gradient-via-position: ;
     --tw-gradient-to-position: ;
+}
+
+.glass-effect {
+    background: #ffffff5b;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
 }
