--- a/eletron-frontend/src/app/layout/footer/footer.component.html
+++ b/eletron-frontend/src/app/layout/footer/footer.component.html
@@ -1,5 +1,15 @@
-<div class="bg-slate-600">
+<div class="bg-black">
     <div class="container mx-auto py-8 px-6">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae facilis necessitatibus ipsam, ut dolorem doloremque architecto cupiditate? Sint doloribus, eos minima, amet fugit perferendis accusamus asperiores at dolorum quam optio enim consequatur quia quisquam autem, veniam nesciunt sapiente cupiditate molestias praesentium iste necessitatibus natus facere! Tenetur vero dignissimos minus molestiae odit eius nihil commodi facilis, laborum inventore adipisci quia aliquid eaque ad sequi reprehenderit amet facere ipsa consequatur. Mollitia quos vel sint explicabo et officia, fugiat modi incidunt eligendi sed accusantium error odio quod voluptatem nemo a deserunt tenetur itaque quaerat sapiente qui facere consectetur? Autem quis blanditiis recusandae nihil.</p>
+        <p class="text-zinc-400">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium deleniti magnam ad debitis, sapiente, iusto ab nisi, quia ducimus cupiditate atque nam fugiat necessitatibus. Consectetur nemo ipsa sint maiores corporis hic tempora officia cumque voluptatem exercitationem odit nulla dolorem pariatur error nesciunt dolore, quidem provident quos accusamus unde voluptate. Cumque obcaecati nam eligendi iste. Explicabo porro sint dolorum soluta quam odit, libero adipisci incidunt repellendus fuga omnis odio optio distinctio quo tenetur sapiente cupiditate laborum enim! Possimus atque quaerat obcaecati tenetur quibusdam doloremque libero. Atque nesciunt culpa, ratione, vel repellat sunt illum officiis provident fugit soluta velit ducimus, molestias iure.
+        </p>
+
+        <p class="text-zinc-400">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium deleniti magnam ad debitis, sapiente, iusto ab nisi, quia ducimus cupiditate atque nam fugiat necessitatibus. Consectetur nemo ipsa sint maiores corporis hic tempora officia cumque voluptatem exercitationem odit nulla dolorem pariatur error nesciunt dolore, quidem provident quos accusamus unde voluptate. Cumque obcaecati nam eligendi iste. Explicabo porro sint dolorum soluta quam odit, libero adipisci incidunt repellendus fuga omnis odio optio distinctio quo tenetur sapiente cupiditate laborum enim! Possimus atque quaerat obcaecati tenetur quibusdam doloremque libero. Atque nesciunt culpa, ratione, vel repellat sunt illum officiis provident fugit soluta velit ducimus, molestias iure.
+        </p>
+
+        <div class="mt-7 flex items-center justify-start">
+            <img width="20px" height="20px" src="assets/img/logo-gray-eletron.png" alt="footer-logo">
+        </div>
     </div>
 </div>
