--- a/eletron-frontend/src/app/components/home/home.component.css
+++ b/eletron-frontend/src/app/components/home/home.component.css
@@ -13,3 +13,18 @@
 main .title {
 	line-height: 1.1;
 }
+
+#image {
+    opacity: 0;
+    transform: translateX(100px);
+}
+
+#text {
+    opacity: 0;
+    transform: translateX(-100px);
+}
+
+#horario {
+    opacity: 0;
+    transform: translateY(-50px);
+}
