--- a/eletron-frontend/src/app/layout/footer/footer.component.html
+++ b/eletron-frontend/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="bg-black">
+<div [hidden]="router.url == '/sistema'" class="bg-black">
     <div class="container mx-auto py-8 px-6">
         <p class="text-zinc-400">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium deleniti magnam ad debitis, sapiente, iusto ab nisi, quia ducimus cupiditate atque nam fugiat necessitatibus. Consectetur nemo ipsa sint maiores corporis hic tempora officia cumque voluptatem exercitationem odit nulla dolorem pariatur error nesciunt dolore, quidem provident quos accusamus unde voluptate. Cumque obcaecati nam eligendi iste. Explicabo porro sint dolorum soluta quam odit, libero adipisci incidunt repellendus fuga omnis odio optio distinctio quo tenetur sapiente cupiditate laborum enim! Possimus atque quaerat obcaecati tenetur quibusdam doloremque libero. Atque nesciunt culpa, ratione, vel repellat sunt illum officiis provident fugit soluta velit ducimus, molestias iure.
