--- a/eletron-frontend/src/app/components/login/login.component.html
+++ b/eletron-frontend/src/app/components/login/login.component.html
@@ -1,2 +1,29 @@
-<p>login works!</p>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia vel iste, dolores omnis dolore quo repellendus sint nulla officiis debitis rerum asperiores eaque ipsa dolorem aliquam nam sit quae, dignissimos harum quisquam rem esse! Nisi itaque laborum ad in saepe laudantium perspiciatis? Expedita minus obcaecati magni sed qui cupiditate animi dolore, quos adipisci cumque suscipit repellat natus beatae deserunt officia optio fuga commodi perferendis? Delectus similique nobis fugit itaque aspernatur quae voluptatibus voluptatum quas rerum id autem illo aperiam alias nisi ratione nihil, consequatur natus eius officia voluptas exercitationem perferendis sed voluptates? Mollitia quam repellat praesentium quaerat ipsam perferendis magni, doloribus ducimus quibusdam excepturi magnam fugiat suscipit dignissimos. Enim rerum debitis quidem obcaecati. Odit nihil ut animi, aspernatur dolorem repellat delectus tenetur praesentium rem autem, magnam odio sapiente earum corporis cumque corrupti, ex esse et modi excepturi! Dolore molestias itaque temporibus molestiae quas. Sunt, corrupti, consequuntur delectus quibusdam reiciendis hic explicabo cumque asperiores ad odio repellendus placeat voluptatibus iusto quisquam recusandae aut! Accusantium molestiae modi est mollitia labore at cum qui vero, explicabo quasi facere eligendi obcaecati magnam cupiditate sint veniam accusamus dolores exercitationem id suscipit quae nam nulla odio quaerat? Repellat facilis quis, consequatur aliquam nisi perspiciatis cum eaque corrupti odio! Repellendus aliquam quisquam beatae quam esse perferendis eos consequuntur libero ut quaerat, non ipsam voluptas aliquid ab maiores odit, magnam corrupti similique, consectetur doloribus autem doloremque animi quo. Porro expedita temporibus odit placeat repellendus fugit reiciendis dolor sint, perferendis molestias, quis illum voluptatum! Aliquid maiores, doloribus aliquam nemo magnam, unde, quaerat dolore natus iusto quasi minima tempora exercitationem labore? Dignissimos cupiditate doloremque nisi ab aperiam velit deserunt unde blanditiis similique dolor expedita ducimus iusto reiciendis neque ipsum recusandae ipsam delectus, cumque, excepturi qui mollitia ex? Iure nemo dolores exercitationem voluptates doloremque sunt pariatur, assumenda deleniti vel ratione facilis!</p>
+<div class="bg-neutral-100">
+    <div class="container h-svh mx-auto p-6">
+        <div class="flex h-full justify-center items-center">
+            <p-card styleClass="w-[340px] md:w-[520px] lg:w-[640px] shadow-lg">
+                <div class="flex items-center main-background" style="background-image: url('assets/img/bg-logo-eletron.png')">
+                    <div class="flex flex-col p-4 gap-2">
+                        <h2 class="my-0">Acessar sistema</h2>
+                        <small class="text-neutral-400 mb-4">eletroluis-sistema-v0.1</small>
+    
+                        <p-inputGroup>
+                            <p-inputGroupAddon>
+                                <i class="pi pi-user"></i>
+                            </p-inputGroupAddon>
+                            <input pInputText placeholder="Login" />
+                        </p-inputGroup>
+                        <p-inputGroup>
+                            <p-inputGroupAddon>
+                                <i class="pi pi-lock"></i>
+                            </p-inputGroupAddon>
+                            <p-password class="login-password" styleClass="w-full" placeholder="Senha" [toggleMask]="true" [feedback]="false" />
+                        </p-inputGroup>
+    
+                        <p-button label="Acessar" icon="pi pi-arrow-right" [rounded]="true" class="mt-5" />
+                    </div>
+                </div>
+            </p-card>
+        </div>
+    </div>
+</div>
