--- a/eletron-frontend/src/app/components/login/login.component.css
+++ b/eletron-frontend/src/app/components/login/login.component.css
@@ -1,5 +1,5 @@
 .main-background {
     background-size: contain;
-    background-position: bottom;
+    background-position: top;
     background-repeat: no-repeat; 
 }
