--- a/eletron-frontend/src/styles.css
+++ b/eletron-frontend/src/styles.css
@@ -67,14 +67,16 @@ body, .p-toast {
     height: auto;
 }
 
-.from-blue-500, .to-teal-400, .from-purple-500, .from-green-500, .to-yellow-500, .from-orange-500 {
+.from-blue-500, .to-teal-400, .from-purple-500, 
+.from-green-500, .from-black, .to-black, 
+.from-blue-900, .from-white, .to-white, .to-zinc-900, .to-zinc-800 {
     --tw-gradient-from-position: ;
     --tw-gradient-via-position: ;
     --tw-gradient-to-position: ;
 }
 
 .glass-effect {
-    background: #ffffff5b;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
+    background: #ffffff0e;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
 }
