--- a/eletron-frontend/src/app/components/home/home.component.html
+++ b/eletron-frontend/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <header #header class="shadow-lg shadow-zinc-100">
     <div class="container mx-auto flex flex-col md:flex-row justify-between gap-5 py-5 px-4 md:px-6">
         <div class="flex items-center flex-col md:flex-row gap-3">
-            <img width="35px" class="img-fluid" src="assets/img/logo-eletron.png" alt="eletron-logo">
+            <img width="35px" class="img-fluid" src="assets/img/logo-black-eletron.png" alt="eletron-logo">
             <div class="flex flex-col gap-2 md:gap-1 text-center md:text-left">
                 <span class="text-xl font-semibold">ELETRÔNICA DO LUIS</span>
                 <div class="flex gap-4 text-slate-500" style="font-size: 14px">
@@ -19,7 +19,7 @@
 </header>
 
 
-<main #main class="container mx-auto py-4 mt-5 md:mt-8 px-4 md:px-6 main-background" style="background-image: url('assets/img/bg-logo-eletron.png')">
+<main #main class="container mx-auto py-4 my-5 md:my-8 px-4 md:px-6 main-background" style="background-image: url('assets/img/bg-logo-eletron.png')">
     <div class="flex flex-col text-center md:text-left gap-5">
         <div class="mb-4">
             <div #title class="title text-6xl md:text-7xl font-bold">
@@ -31,35 +31,35 @@
         </div>
 
         <div #map class="lg:w-1/2 rounded-2xl relative overflow-hidden">
-            <div class="z-10" style="height: 420px" leaflet [leafletOptions]="options" [leafletLayers]="[marker]"></div>
+            <div class="z-10" style="height: 300px" leaflet [leafletOptions]="options" [leafletLayers]="[marker]"></div>
         </div>
     </div>
 </main>
 
 
-<div class="h-80 lines-background" style="background-image: url('assets/img/bg-lines.png')"></div>
+<div class="h-64 hidden lg:block lines-background" style="background-image: url('assets/img/bg-lines.png')"></div>
 
 
-<div class="bg-zinc-800 main-background" style="background-image: url('assets/img/bg-lines-white.png')">
-    <section class="glass-effect pt-28 pb-40">
+<div class="bg-black main-background" style="background-image: url('assets/img/bg-blue.png')">
+    <section class="pt-28 pb-40">
         <div class="container mx-auto">
             <div class="flex flex-col justify-center">
                 <div class="flex flex-col lg:flex-row text-center items-center justify-evenly">
                     <div class="flex flex-col items-center">
                         <img class="w-48 lg:w-80 icon-section" src="assets/img/personal.png" alt="">
-                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-teal-300 font-extrabold">
+                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-zinc-400 font-extrabold">
                             <span class="text-5xl xl:text-6xl">Análise Rápida</span> <br> e <span class="text-5xl xl:text-6xl">Gratuita</span>
                         </h1>
                     </div>
                     <div class="flex flex-col items-center">
                         <img class="w-48 lg:w-80 icon-section" src="assets/img/time.png" alt="">
-                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-red-300 font-extrabold">
+                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-zinc-400 font-extrabold">
                             <span class="text-6xl xl:text-7xl">+20 anos</span> <br> no mercado
                         </h1>
                     </div>
                     <div class="flex flex-col items-center">
                         <img class="w-48 lg:w-80 icon-section" src="assets/img/security.png" alt="">
-                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-green-300 font-extrabold">
+                        <h1 class="bg-clip-text text-transparent bg-gradient-to-b from-white to-zinc-400 font-extrabold">
                             <span class="text-6xl xl:text-6xl">Garantia</span> de <br> <span class="text-6xl xl:text-6xl">Qualidade</span>
                         </h1>
                     </div>
@@ -71,7 +71,7 @@
 
 
 <div #horario class="bg-black">
-    <div class="container mx-auto px-6 pt-8 relative overflow-hidden pb-40">
+    <div class="container mx-auto px-6 py-8 relative overflow-hidden">
         <div class="relative z-50">
             <h1 class="text-5xl md:text-6xl lg:text-7xl font-extrabold text-neutral-100 mt-0 mb-3">Horário de funcionamento</h1>
             <div class="flex flex-col gap-1 text-lg text-neutral-300 horario-descricao">
@@ -89,8 +89,8 @@
             </div>
         </div>
     
-        <div class="absolute right-5 z-0 bottom-0 opacity-20">
-            <img class="w-48 md:w-96" src="assets/img/logo-gray-eletron.png" alt="">
+        <div class="absolute right-12 z-0 top-0 opacity-20">
+            <img class="w-48 md:w-80" src="assets/img/logo-gray-eletron.png" alt="">
         </div>
     </div>
 </div>
