--- a/eletron-frontend/src/app/layout/footer/footer.component.html
+++ b/eletron-frontend/src/app/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="mt-7 flex items-center gap-3 justify-start text-neutral-500">
             <div class="flex flex-col gap-4 text-neutral-500 my-8">
                 <span>Brasil</span>
-                <span>R. Espírito Santo, 121 - Beira Rio, Nova Venécia - ES, 29830-000</span>
+                <span>R. Espírito Santo, 121 - Beira Rio, Nova Venécia - ES</span>
                 <span>(27) 99969-2465</span>
                 <span>Eletrônica do Luis</span>
                 <span>2024</span>
